--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,8 @@
 body {
   min-height: 100vh;
   width: 100vw;
+  max-width: 100%;
+  overflow-x: hidden;
   display: flex;
   flex-flow: column;
   background-color: vars.$backGround-dark-color;
